<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom|center_horizontal"
    android:background="@drawable/austin_skyline"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/dtex_logo" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/west_campus"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/black_trans"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="search_by"
            android:text="@string/west_campus"
            android:textColor="@color/white"
			android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dirty_sixth"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/black_trans"
            android:layout_alignLeft="@+id/west_campus"
            android:layout_below="@+id/west_campus"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dirty_sixth"
            android:textColor="@color/white"
			android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/west_sixth"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/black_trans"
            android:layout_alignLeft="@+id/dirty_sixth"
            android:layout_below="@+id/dirty_sixth"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/west_sixth"
            android:textColor="@color/white"
			android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/north_austin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/black_trans"
            android:layout_alignLeft="@+id/west_sixth"
            android:layout_below="@+id/west_sixth"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/north_austin"
            android:textColor="@color/white"
			android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>